// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`replay/transform transform can convert images 1`] = `
[
  {
    "data": {
      "height": 600,
      "href": "",
      "width": 300,
    },
    "timestamp": 1,
    "type": 4,
  },
  {
    "data": {
      "initialOffset": {
        "left": 0,
        "top": 0,
      },
      "node": {
        "childNodes": [
          {
            "id": 2,
            "name": "html",
            "publicId": "",
            "systemId": "",
            "type": 1,
          },
          {
            "attributes": {
              "style": "height: 100vh; width: 100vw;",
            },
            "childNodes": [
              {
                "attributes": {},
                "childNodes": [],
                "id": 4,
                "tagName": "head",
                "type": 2,
              },
              {
                "attributes": {
                  "style": "height: 100vh; width: 100vw;",
                },
                "childNodes": [
                  {
                    "attributes": {},
                    "childNodes": [
                      {
                        "attributes": {
                          "style": "color: #ffffff;width: 100px;height: 30px;position: fixed;left: 11px;top: 12px;overflow:hidden;white-space:nowrap;",
                        },
                        "childNodes": [
                          {
                            "id": 12345,
                            "textContent": "Ⱏ遲䩞㡛쓯잘ጫ䵤㥦鷁끞鈅毅┌빯湌Თ",
                            "type": 3,
                          },
                        ],
                        "id": 106,
                        "tagName": "div",
                        "type": 2,
                      },
                      {
                        "attributes": {
                          "height": 30,
                          "src": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABHNCSVQICAgIfAhkiAAAAAlwSFlzAAAApgAAAKYB3X3/OAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAANCSURBVEiJtZZPbBtFFMZ/M7ubXdtdb1xSFyeilBapySVU8h8OoFaooFSqiihIVIpQBKci6KEg9Q6H9kovIHoCIVQJJCKE1ENFjnAgcaSGC6rEnxBwA04Tx43t2FnvDAfjkNibxgHxnWb2e/u992bee7tCa00YFsffekFY+nUzFtjW0LrvjRXrCDIAaPLlW0nHL0SsZtVoaF98mLrx3pdhOqLtYPHChahZcYYO7KvPFxvRl5XPp1sN3adWiD1ZAqD6XYK1b/dvE5IWryTt2udLFedwc1+9kLp+vbbpoDh+6TklxBeAi9TL0taeWpdmZzQDry0AcO+jQ12RyohqqoYoo8RDwJrU+qXkjWtfi8Xxt58BdQuwQs9qC/afLwCw8tnQbqYAPsgxE1S6F3EAIXux2oQFKm0ihMsOF71dHYx+f3NND68ghCu1YIoePPQN1pGRABkJ6Bus96CutRZMydTl+TvuiRW1m3n0eDl0vRPcEysqdXn+jsQPsrHMquGeXEaY4Yk4wxWcY5V/9scqOMOVUFthatyTy8QyqwZ+kDURKoMWxNKr2EeqVKcTNOajqKoBgOE28U4tdQl5p5bwCw7BWquaZSzAPlwjlithJtp3pTImSqQRrb2Z8PHGigD4RZuNX6JYj6wj7O4TFLbCO/Mn/m8R+h6rYSUb3ekokRY6f/YukArN979jcW+V/S8g0eT/N3VN3kTqWbQ428m9/8k0P/1aIhF36PccEl6EhOcAUCrXKZXXWS3XKd2vc/TRBG9O5ELC17MmWubD2nKhUKZa26Ba2+D3P+4/MNCFwg59oWVeYhkzgN/JDR8deKBoD7Y+ljEjGZ0sosXVTvbc6RHirr2reNy1OXd6pJsQ+gqjk8VWFYmHrwBzW/n+uMPFiRwHB2I7ih8ciHFxIkd/3Omk5tCDV1t+2nNu5sxxpDFNx+huNhVT3/zMDz8usXC3ddaHBj1GHj/As08fwTS7Kt1HBTmyN29vdwAw+/wbwLVOJ3uAD1wi/dUH7Qei66PfyuRj4Ik9is+hglfbkbfR3cnZm7chlUWLdwmprtCohX4HUtlOcQjLYCu+fzGJH2QRKvP3UNz8bWk1qMxjGTOMThZ3kvgLI5AzFfo379UAAAAASUVORK5CYII=",
                          "style": "width: 100px;height: 30px;position: fixed;left: 25px;top: 42px;",
                          "width": 100,
                        },
                        "childNodes": [],
                        "id": 12345,
                        "tagName": "img",
                        "type": 2,
                      },
                    ],
                    "id": 105,
                    "tagName": "div",
                    "type": 2,
                  },
                ],
                "id": 5,
                "tagName": "body",
                "type": 2,
              },
            ],
            "id": 3,
            "tagName": "html",
            "type": 2,
          },
        ],
        "id": 1,
        "type": 0,
      },
    },
    "timestamp": 1,
    "type": 2,
  },
]
`;

exports[`replay/transform transform can convert rect with text 1`] = `
[
  {
    "data": {
      "height": 600,
      "href": "",
      "width": 300,
    },
    "timestamp": 1,
    "type": 4,
  },
  {
    "data": {
      "initialOffset": {
        "left": 0,
        "top": 0,
      },
      "node": {
        "childNodes": [
          {
            "id": 2,
            "name": "html",
            "publicId": "",
            "systemId": "",
            "type": 1,
          },
          {
            "attributes": {
              "style": "height: 100vh; width: 100vw;",
            },
            "childNodes": [
              {
                "attributes": {},
                "childNodes": [],
                "id": 4,
                "tagName": "head",
                "type": 2,
              },
              {
                "attributes": {
                  "style": "height: 100vh; width: 100vw;",
                },
                "childNodes": [
                  {
                    "attributes": {},
                    "childNodes": [
                      {
                        "attributes": {
                          "style": "width: 100px;height: 30px;position: fixed;left: 11px;top: 12px;",
                          "viewBox": "0 0 100 30",
                        },
                        "childNodes": [
                          {
                            "attributes": {
                              "fill": "transparent",
                              "height": 30,
                              "rx": "10px",
                              "stroke": "#ee3ee4",
                              "stroke-width": "4px",
                              "width": 100,
                              "x": 0,
                              "y": 0,
                            },
                            "childNodes": [],
                            "id": 108,
                            "tagName": "rect",
                            "type": 2,
                          },
                        ],
                        "id": 12345,
                        "tagName": "svg",
                        "type": 2,
                      },
                      {
                        "attributes": {
                          "style": "width: 100px;height: 30px;position: fixed;left: 13px;top: 17px;overflow:hidden;white-space:nowrap;",
                        },
                        "childNodes": [
                          {
                            "id": 12345,
                            "textContent": "i am in the box",
                            "type": 3,
                          },
                        ],
                        "id": 109,
                        "tagName": "div",
                        "type": 2,
                      },
                    ],
                    "id": 107,
                    "tagName": "div",
                    "type": 2,
                  },
                ],
                "id": 5,
                "tagName": "body",
                "type": 2,
              },
            ],
            "id": 3,
            "tagName": "html",
            "type": 2,
          },
        ],
        "id": 1,
        "type": 0,
      },
    },
    "timestamp": 1,
    "type": 2,
  },
]
`;

exports[`replay/transform transform can ignore unknown wireframe types 1`] = `
[
  {
    "data": {
      "height": 600,
      "href": "",
      "width": 300,
    },
    "timestamp": 1,
    "type": 4,
  },
  {
    "data": {
      "initialOffset": {
        "left": 0,
        "top": 0,
      },
      "node": {
        "childNodes": [
          {
            "id": 2,
            "name": "html",
            "publicId": "",
            "systemId": "",
            "type": 1,
          },
          {
            "attributes": {
              "style": "height: 100vh; width: 100vw;",
            },
            "childNodes": [
              {
                "attributes": {},
                "childNodes": [],
                "id": 4,
                "tagName": "head",
                "type": 2,
              },
              {
                "attributes": {
                  "style": "height: 100vh; width: 100vw;",
                },
                "childNodes": [
                  {
                    "attributes": {},
                    "childNodes": [],
                    "id": 104,
                    "tagName": "div",
                    "type": 2,
                  },
                ],
                "id": 5,
                "tagName": "body",
                "type": 2,
              },
            ],
            "id": 3,
            "tagName": "html",
            "type": 2,
          },
        ],
        "id": 1,
        "type": 0,
      },
    },
    "timestamp": 1,
    "type": 2,
  },
]
`;

exports[`replay/transform transform can process unknown types without error 1`] = `
[
  {
    "data": {
      "height": 600,
      "href": "",
      "width": 300,
    },
    "timestamp": 1,
    "type": 4,
  },
  {
    "data": {
      "height": 600,
      "href": "included when present",
      "width": 300,
    },
    "timestamp": 1,
    "type": 4,
  },
  {
    "type": 9999,
  },
  {
    "data": {
      "initialOffset": {
        "left": 0,
        "top": 0,
      },
      "node": {
        "childNodes": [
          {
            "id": 2,
            "name": "html",
            "publicId": "",
            "systemId": "",
            "type": 1,
          },
          {
            "attributes": {
              "style": "height: 100vh; width: 100vw;",
            },
            "childNodes": [
              {
                "attributes": {},
                "childNodes": [],
                "id": 4,
                "tagName": "head",
                "type": 2,
              },
              {
                "attributes": {
                  "style": "height: 100vh; width: 100vw;",
                },
                "childNodes": [
                  {
                    "attributes": {},
                    "childNodes": [
                      {
                        "attributes": {
                          "height": 30,
                          "style": "width: 100px;height: 30px;position: fixed;left: 25px;top: 42px;",
                          "width": 100,
                        },
                        "childNodes": [
                          {
                            "attributes": {
                              "fill": "grey",
                              "height": 30,
                              "style": "width: 100px;height: 30px;position: fixed;left: 25px;top: 42px;",
                              "width": 100,
                            },
                            "childNodes": [],
                            "id": 101,
                            "tagName": "rect",
                            "type": 2,
                          },
                          {
                            "attributes": {
                              "dominant-baseline": "middle",
                              "fill": "white",
                              "font-size": "30",
                              "text-anchor": "middle",
                              "x": "50%",
                              "y": "50%",
                            },
                            "childNodes": [
                              {
                                "id": 103,
                                "textContent": "image",
                                "type": 3,
                              },
                            ],
                            "id": 102,
                            "tagName": "text",
                            "type": 2,
                          },
                        ],
                        "id": 12345,
                        "tagName": "svg",
                        "type": 2,
                      },
                    ],
                    "id": 100,
                    "tagName": "div",
                    "type": 2,
                  },
                ],
                "id": 5,
                "tagName": "body",
                "type": 2,
              },
            ],
            "id": 3,
            "tagName": "html",
            "type": 2,
          },
        ],
        "id": 1,
        "type": 0,
      },
    },
    "timestamp": 1,
    "type": 2,
  },
]
`;

exports[`replay/transform transform can short-circuit non-mobile full snapshot 1`] = `
[
  {
    "data": {
      "height": 600,
      "href": "https://my-awesome.site",
      "width": 300,
    },
    "timestamp": 1,
    "type": 4,
  },
  {
    "data": {
      "node": {
        "the": "payload",
      },
    },
    "timestamp": 1,
    "type": 2,
  },
]
`;

exports[`replay/transform transform child wireframes are processed 1`] = `
[
  {
    "data": {
      "height": 600,
      "href": "",
      "width": 300,
    },
    "timestamp": 1,
    "type": 4,
  },
  {
    "data": {
      "initialOffset": {
        "left": 0,
        "top": 0,
      },
      "node": {
        "childNodes": [
          {
            "id": 2,
            "name": "html",
            "publicId": "",
            "systemId": "",
            "type": 1,
          },
          {
            "attributes": {
              "style": "height: 100vh; width: 100vw;",
            },
            "childNodes": [
              {
                "attributes": {},
                "childNodes": [],
                "id": 4,
                "tagName": "head",
                "type": 2,
              },
              {
                "attributes": {
                  "style": "height: 100vh; width: 100vw;",
                },
                "childNodes": [
                  {
                    "attributes": {},
                    "childNodes": [
                      {
                        "attributes": {
                          "style": "position: fixed;left: 0px;top: 0px;overflow:hidden;white-space:nowrap;",
                        },
                        "childNodes": [
                          {
                            "attributes": {
                              "style": "position: fixed;left: 0px;top: 0px;overflow:hidden;white-space:nowrap;",
                            },
                            "childNodes": [
                              {
                                "attributes": {
                                  "style": "color: #ffffff;background-color: #000000;border-width: 4px;border-radius: 10px;border-color: #000ddd;border-style: solid;width: 100px;height: 30px;position: fixed;left: 11px;top: 12px;overflow:hidden;white-space:nowrap;",
                                },
                                "childNodes": [
                                  {
                                    "id": 12345,
                                    "textContent": "first nested",
                                    "type": 3,
                                  },
                                ],
                                "id": 111,
                                "tagName": "div",
                                "type": 2,
                              },
                              {
                                "attributes": {
                                  "style": "color: #ffffff;background-color: #000000;border-width: 4px;border-radius: 10px;border-color: #000ddd;border-style: solid;width: 100px;height: 30px;position: fixed;left: 11px;top: 12px;overflow:hidden;white-space:nowrap;",
                                },
                                "childNodes": [
                                  {
                                    "id": 12345,
                                    "textContent": "second nested",
                                    "type": 3,
                                  },
                                ],
                                "id": 112,
                                "tagName": "div",
                                "type": 2,
                              },
                            ],
                            "id": 98765,
                            "tagName": "div",
                            "type": 2,
                          },
                          {
                            "attributes": {
                              "style": "color: #ffffff;background-color: #000000;border-width: 4px;border-radius: 10px;border-color: #000ddd;border-style: solid;width: 100px;height: 30px;position: fixed;left: 11px;top: 12px;overflow:hidden;white-space:nowrap;",
                            },
                            "childNodes": [
                              {
                                "id": 12345,
                                "textContent": "third (different level) nested",
                                "type": 3,
                              },
                            ],
                            "id": 113,
                            "tagName": "div",
                            "type": 2,
                          },
                        ],
                        "id": 123456789,
                        "tagName": "div",
                        "type": 2,
                      },
                    ],
                    "id": 110,
                    "tagName": "div",
                    "type": 2,
                  },
                ],
                "id": 5,
                "tagName": "body",
                "type": 2,
              },
            ],
            "id": 3,
            "tagName": "html",
            "type": 2,
          },
        ],
        "id": 1,
        "type": 0,
      },
    },
    "timestamp": 1,
    "type": 2,
  },
]
`;

exports[`replay/transform transform inputs buttons with nested elements 1`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                        "type": "button",
                      },
                      "childNodes": [],
                      "id": 12359,
                      "tagName": "button",
                      "type": 2,
                    },
                    {
                      "attributes": {
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                        "type": "button",
                      },
                      "childNodes": [
                        {
                          "id": 119,
                          "textContent": "click me",
                          "type": 3,
                        },
                      ],
                      "id": 12361,
                      "tagName": "button",
                      "type": 2,
                    },
                  ],
                  "id": 118,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs input - $inputType - hello 1`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [],
                  "id": 163,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs input - button - click me 1`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                        "type": "button",
                      },
                      "childNodes": [
                        {
                          "id": 155,
                          "textContent": "click me",
                          "type": 3,
                        },
                      ],
                      "id": 12358,
                      "tagName": "button",
                      "type": 2,
                    },
                  ],
                  "id": 154,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs input - checkbox - $value 1`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                      },
                      "childNodes": [
                        {
                          "attributes": {
                            "checked": true,
                            "style": null,
                            "type": "checkbox",
                          },
                          "childNodes": [],
                          "id": 12357,
                          "tagName": "input",
                          "type": 2,
                        },
                        {
                          "id": 136,
                          "textContent": "first",
                          "type": 3,
                        },
                      ],
                      "id": 135,
                      "tagName": "label",
                      "type": 2,
                    },
                  ],
                  "id": 134,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs input - checkbox - $value 2`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                      },
                      "childNodes": [
                        {
                          "attributes": {
                            "style": null,
                            "type": "checkbox",
                          },
                          "childNodes": [],
                          "id": 12357,
                          "tagName": "input",
                          "type": 2,
                        },
                        {
                          "id": 139,
                          "textContent": "second",
                          "type": 3,
                        },
                      ],
                      "id": 138,
                      "tagName": "label",
                      "type": 2,
                    },
                  ],
                  "id": 137,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs input - checkbox - $value 3`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                      },
                      "childNodes": [
                        {
                          "attributes": {
                            "checked": true,
                            "disabled": true,
                            "style": null,
                            "type": "checkbox",
                          },
                          "childNodes": [],
                          "id": 12357,
                          "tagName": "input",
                          "type": 2,
                        },
                        {
                          "id": 142,
                          "textContent": "third",
                          "type": 3,
                        },
                      ],
                      "id": 141,
                      "tagName": "label",
                      "type": 2,
                    },
                  ],
                  "id": 140,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs input - checkbox - $value 4`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "checked": true,
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                        "type": "checkbox",
                      },
                      "childNodes": [],
                      "id": 12357,
                      "tagName": "input",
                      "type": 2,
                    },
                  ],
                  "id": 143,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs input - email - $value 1`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                        "type": "email",
                        "value": "",
                      },
                      "childNodes": [],
                      "id": 12349,
                      "tagName": "input",
                      "type": 2,
                    },
                  ],
                  "id": 127,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs input - number - $value 1`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                        "type": "number",
                        "value": "",
                      },
                      "childNodes": [],
                      "id": 12350,
                      "tagName": "input",
                      "type": 2,
                    },
                  ],
                  "id": 128,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs input - password - $value 1`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                        "type": "password",
                        "value": "",
                      },
                      "childNodes": [],
                      "id": 12348,
                      "tagName": "input",
                      "type": 2,
                    },
                  ],
                  "id": 126,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs input - progress - $value 1`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                      },
                      "childNodes": [
                        {
                          "attributes": {
                            "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;border: 4px solid transparent;border-radius: 50%;border-top: 4px solid #fff;animation: spin 2s linear infinite;",
                          },
                          "childNodes": [],
                          "id": 165,
                          "tagName": "div",
                          "type": 2,
                        },
                      ],
                      "id": 12365,
                      "tagName": "div",
                      "type": 2,
                    },
                  ],
                  "id": 164,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs input - progress - $value 2`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "max": null,
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                        "type": null,
                        "value": null,
                      },
                      "childNodes": [],
                      "id": 12365,
                      "tagName": "progress",
                      "type": 2,
                    },
                  ],
                  "id": 166,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs input - progress - 0.75 1`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "max": null,
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                        "type": null,
                        "value": 0.75,
                      },
                      "childNodes": [],
                      "id": 12365,
                      "tagName": "progress",
                      "type": 2,
                    },
                  ],
                  "id": 167,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs input - progress - 0.75 2`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "max": 2.5,
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                        "type": null,
                        "value": 0.75,
                      },
                      "childNodes": [],
                      "id": 12365,
                      "tagName": "progress",
                      "type": 2,
                    },
                  ],
                  "id": 168,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs input - search - $value 1`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                        "type": "search",
                        "value": "",
                      },
                      "childNodes": [],
                      "id": 12351,
                      "tagName": "input",
                      "type": 2,
                    },
                  ],
                  "id": 129,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs input - select - hello 1`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                        "type": "select",
                        "value": "hello",
                      },
                      "childNodes": [
                        {
                          "attributes": {
                            "selected": true,
                          },
                          "childNodes": [
                            {
                              "id": 160,
                              "textContent": "hello",
                              "type": 3,
                            },
                          ],
                          "id": 159,
                          "tagName": "option",
                          "type": 2,
                        },
                        {
                          "attributes": {},
                          "childNodes": [
                            {
                              "id": 162,
                              "textContent": "world",
                              "type": 3,
                            },
                          ],
                          "id": 161,
                          "tagName": "option",
                          "type": 2,
                        },
                      ],
                      "id": 12365,
                      "tagName": "select",
                      "type": 2,
                    },
                  ],
                  "id": 158,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs input - tel - $value 1`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "disabled": true,
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                        "type": "tel",
                        "value": "",
                      },
                      "childNodes": [],
                      "id": 12352,
                      "tagName": "input",
                      "type": 2,
                    },
                  ],
                  "id": 130,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs input - text - $value 1`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                        "type": "text",
                        "value": "",
                      },
                      "childNodes": [],
                      "id": 12347,
                      "tagName": "input",
                      "type": 2,
                    },
                  ],
                  "id": 125,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs input - text - hello 1`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                        "type": "text",
                        "value": "hello",
                      },
                      "childNodes": [],
                      "id": 12346,
                      "tagName": "input",
                      "type": 2,
                    },
                  ],
                  "id": 124,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs input - textArea - $value 1`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                        "type": "textArea",
                        "value": "",
                      },
                      "childNodes": [],
                      "id": 12364,
                      "tagName": "input",
                      "type": 2,
                    },
                  ],
                  "id": 157,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs input - textArea - hello 1`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                        "type": "textArea",
                        "value": "hello",
                      },
                      "childNodes": [],
                      "id": 12363,
                      "tagName": "input",
                      "type": 2,
                    },
                  ],
                  "id": 156,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs input - toggle - $value 1`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                      },
                      "childNodes": [
                        {
                          "attributes": {
                            "checked": true,
                            "style": null,
                            "type": "checkbox",
                          },
                          "childNodes": [],
                          "id": 12357,
                          "tagName": "input",
                          "type": 2,
                        },
                        {
                          "id": 146,
                          "textContent": "first",
                          "type": 3,
                        },
                      ],
                      "id": 145,
                      "tagName": "label",
                      "type": 2,
                    },
                  ],
                  "id": 144,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs input - toggle - $value 2`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                      },
                      "childNodes": [
                        {
                          "attributes": {
                            "style": null,
                            "type": "checkbox",
                          },
                          "childNodes": [],
                          "id": 12357,
                          "tagName": "input",
                          "type": 2,
                        },
                        {
                          "id": 149,
                          "textContent": "second",
                          "type": 3,
                        },
                      ],
                      "id": 148,
                      "tagName": "label",
                      "type": 2,
                    },
                  ],
                  "id": 147,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs input - toggle - $value 3`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                      },
                      "childNodes": [
                        {
                          "attributes": {
                            "checked": true,
                            "disabled": true,
                            "style": null,
                            "type": "checkbox",
                          },
                          "childNodes": [],
                          "id": 12357,
                          "tagName": "input",
                          "type": 2,
                        },
                        {
                          "id": 152,
                          "textContent": "third",
                          "type": 3,
                        },
                      ],
                      "id": 151,
                      "tagName": "label",
                      "type": 2,
                    },
                  ],
                  "id": 150,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs input - toggle - $value 4`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "checked": true,
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                        "type": "checkbox",
                      },
                      "childNodes": [],
                      "id": 12357,
                      "tagName": "input",
                      "type": 2,
                    },
                  ],
                  "id": 153,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs input - url - https://example.io 1`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                        "type": "url",
                        "value": "https://example.io",
                      },
                      "childNodes": [],
                      "id": 12352,
                      "tagName": "input",
                      "type": 2,
                    },
                  ],
                  "id": 131,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs placeholder - $inputType - $value 1`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "height": 30,
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                        "width": 100,
                      },
                      "childNodes": [
                        {
                          "attributes": {
                            "fill": "grey",
                            "height": 30,
                            "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                            "width": 100,
                          },
                          "childNodes": [],
                          "id": 170,
                          "tagName": "rect",
                          "type": 2,
                        },
                        {
                          "attributes": {
                            "dominant-baseline": "middle",
                            "fill": "white",
                            "font-size": "30",
                            "text-anchor": "middle",
                            "x": "50%",
                            "y": "50%",
                          },
                          "childNodes": [
                            {
                              "id": 172,
                              "textContent": "hello",
                              "type": 3,
                            },
                          ],
                          "id": 171,
                          "tagName": "text",
                          "type": 2,
                        },
                      ],
                      "id": 12365,
                      "tagName": "svg",
                      "type": 2,
                    },
                  ],
                  "id": 169,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs radio group - $inputType - $value 1`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [],
                  "id": 133,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs radio_group - $inputType - $value 1`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                      },
                      "childNodes": [],
                      "id": 123123,
                      "tagName": "div",
                      "type": 2,
                    },
                  ],
                  "id": 132,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs radio_group 1`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                      },
                      "childNodes": [],
                      "id": 54321,
                      "tagName": "div",
                      "type": 2,
                    },
                  ],
                  "id": 123,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs webview - $inputType - $value 1`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [],
                  "id": 173,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform inputs wrapping with labels 1`] = `
{
  "data": {
    "initialOffset": {
      "left": 0,
      "top": 0,
    },
    "node": {
      "childNodes": [
        {
          "id": 2,
          "name": "html",
          "publicId": "",
          "systemId": "",
          "type": 1,
        },
        {
          "attributes": {
            "style": "height: 100vh; width: 100vw;",
          },
          "childNodes": [
            {
              "attributes": {},
              "childNodes": [],
              "id": 4,
              "tagName": "head",
              "type": 2,
            },
            {
              "attributes": {
                "style": "height: 100vh; width: 100vw;",
              },
              "childNodes": [
                {
                  "attributes": {},
                  "childNodes": [
                    {
                      "attributes": {
                        "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                      },
                      "childNodes": [
                        {
                          "attributes": {
                            "style": null,
                            "type": "checkbox",
                          },
                          "childNodes": [],
                          "id": 12359,
                          "tagName": "input",
                          "type": 2,
                        },
                        {
                          "id": 122,
                          "textContent": "i will wrap the checkbox",
                          "type": 3,
                        },
                      ],
                      "id": 121,
                      "tagName": "label",
                      "type": 2,
                    },
                  ],
                  "id": 120,
                  "tagName": "div",
                  "type": 2,
                },
              ],
              "id": 5,
              "tagName": "body",
              "type": 2,
            },
          ],
          "id": 3,
          "tagName": "html",
          "type": 2,
        },
      ],
      "id": 1,
      "type": 0,
    },
  },
  "timestamp": 1,
  "type": 2,
}
`;

exports[`replay/transform transform omitting x and y is equivalent to setting them to 0 1`] = `
[
  {
    "data": {
      "initialOffset": {
        "left": 0,
        "top": 0,
      },
      "node": {
        "childNodes": [
          {
            "id": 2,
            "name": "html",
            "publicId": "",
            "systemId": "",
            "type": 1,
          },
          {
            "attributes": {
              "style": "height: 100vh; width: 100vw;",
            },
            "childNodes": [
              {
                "attributes": {},
                "childNodes": [],
                "id": 4,
                "tagName": "head",
                "type": 2,
              },
              {
                "attributes": {
                  "style": "height: 100vh; width: 100vw;",
                },
                "childNodes": [
                  {
                    "attributes": {},
                    "childNodes": [
                      {
                        "attributes": {
                          "height": 30,
                          "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                          "width": 100,
                        },
                        "childNodes": [
                          {
                            "attributes": {
                              "fill": "grey",
                              "height": 30,
                              "style": "width: 100px;height: 30px;position: fixed;left: 0px;top: 0px;",
                              "width": 100,
                            },
                            "childNodes": [],
                            "id": 115,
                            "tagName": "rect",
                            "type": 2,
                          },
                          {
                            "attributes": {
                              "dominant-baseline": "middle",
                              "fill": "white",
                              "font-size": "30",
                              "text-anchor": "middle",
                              "x": "50%",
                              "y": "50%",
                            },
                            "childNodes": [
                              {
                                "id": 117,
                                "textContent": "image",
                                "type": 3,
                              },
                            ],
                            "id": 116,
                            "tagName": "text",
                            "type": 2,
                          },
                        ],
                        "id": 12345,
                        "tagName": "svg",
                        "type": 2,
                      },
                    ],
                    "id": 114,
                    "tagName": "div",
                    "type": 2,
                  },
                ],
                "id": 5,
                "tagName": "body",
                "type": 2,
              },
            ],
            "id": 3,
            "tagName": "html",
            "type": 2,
          },
        ],
        "id": 1,
        "type": 0,
      },
    },
    "timestamp": 1,
    "type": 2,
  },
]
`;

exports[`replay/transform transform respect incremental ids, replace with body otherwise 1`] = `
[
  {
    "data": {
      "id": 5,
      "pointerType": 2,
      "source": 2,
      "type": 7,
      "x": 523,
      "y": 683,
    },
    "delay": 2160,
    "timestamp": 1701355473313,
    "type": 3,
    "windowId": "ddc9c89d-2272-4b07-a280-c00db3a9182f",
  },
  {
    "data": {
      "id": 145,
      "pointerType": 2,
      "source": 2,
      "type": 7,
      "x": 523,
      "y": 683,
    },
    "delay": 2160,
    "timestamp": 1701355473313,
    "type": 3,
    "windowId": "ddc9c89d-2272-4b07-a280-c00db3a9182f",
  },
]
`;
